<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.githubopenpulls.viewModels.RepoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        tools:context=".ui.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_owner_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="210dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_owner_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_owner_name"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:text="@={data.observableOwnerName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_repo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_owner_name"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="210dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_repo_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repo_name"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:text="@={data.observableRepoName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_repo_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>